[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ch.at-py"
version = "0.1.0"
description = "Universal Basic Intelligence — Python port of ch.at"
authors = [{name = "Eduardo J. Barrios", email = "edujbarrios@outlook.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "paramiko>=3.0",
    "dnslib>=0.9",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
chat = "chat:main"

[tool.setuptools.packages.find]
where = ["."]
